[gd_scene load_steps=2 format=3 uid="uid://hud123456"]

[ext_resource type="Script" path="res://scenes/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComboContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 180.0
grow_horizontal = 2

[node name="ComboLabel" type="Label" parent="ComboContainer"]
layout_mode = 2
text = "COMBO"
horizontal_alignment = 1

[node name="ComboCounter" type="Label" parent="ComboContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="TopContainer" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
alignment = 1

[node name="RoomLabel" type="Label" parent="TopContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Room 1 / 10"

[node name="AbilityContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30
alignment = 1

[node name="BlinkCooldown" type="ProgressBar" parent="AbilityContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
max_value = 2.0
value = 2.0
show_percentage = false

[node name="Label" type="Label" parent="AbilityContainer/BlinkCooldown"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "RMB"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="AbilityContainer/BlinkCooldown"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -20.0
grow_horizontal = 2
text = "BLINK"
horizontal_alignment = 1

[node name="DashCooldown" type="ProgressBar" parent="AbilityContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
max_value = 1.5
value = 1.5
show_percentage = false

[node name="Label" type="Label" parent="AbilityContainer/DashCooldown"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SHIFT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="AbilityContainer/DashCooldown"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -20.0
grow_horizontal = 2
text = "DASH"
horizontal_alignment = 1
